--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 nav{
     padding: 4px 34px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     box-shadow: 0px 1px 0px #E5E9F2;
@@ -63,12 +64,14 @@ nav .search img{
     background: #B92728;
     box-shadow: 0px 1px 0px #E5E9F2;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 4px 16px;
     align-items: center;
 }
 .second-nav .items{
     display: flex;
+    flex-wrap: wrap;
 }
 .second-nav .items .item{
     display: flex;
@@ -88,6 +91,7 @@ nav .search img{
 }
 .second-nav .tabs{
     display: flex;
+    flex-wrap: wrap;
 }
 .second-nav .tabs .tab{
     display: flex;
@@ -247,4 +251,96 @@ nav .search img{
     line-height: 16px;
     color: #fff;
     margin: 22px 0;
+}
+
+.countdown{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: calc(100% - 120px);
+    margin: 10px auto;
+    padding: 20px 10px 0 10px;
+    flex-wrap: wrap;
+}
+.countdown .timer{
+    display: flex;
+}
+.countdown .timer > span{
+    margin: 0 12px 0 8px;
+    font-size: 50.2222px;
+    line-height: 22px;
+    color: #364B70;
+}
+.countdown .timer > div{
+    text-align: center;
+}
+.countdown .timer > div p{
+    background: #364B70;
+    box-shadow: 0px 5.58025px 5.58025px rgba(0, 0, 0, 0.25);
+    color: #fff;
+    height: 36px;
+    width: 60px;
+    font-size: 33.4815px;
+    line-height: 22px;
+    display: grid;
+    place-items: center;
+    font-family: 'Syncopate';
+}
+.countdown .timer > div span{
+    font-size: 19.5309px;
+    line-height: 33px;
+    color: #364B70;
+}
+.countdown .title{
+    display: flex;
+    align-items: center;
+    background: #364B70;
+    border-radius: 50px 0px;
+    padding: 12px 60px;
+}
+.countdown .title p{
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 24px;
+    color: #FFFFFF;
+    text-align: right;
+    margin: 0 0 0 8px;
+}
+
+.just-text{
+    text-align: center;
+}
+.just-text > p:nth-of-type(1){
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 34px;    
+    color: #323232;
+}
+.just-text > p:nth-of-type(2){
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    color: #B92728;
+    margin: 12px 0;
+}
+.just-text > p:nth-of-type(2) span{
+    color: #323232;
+}
+.just-text div{
+    background: #FFFFFF;
+    border: 2px dashed #B92728;
+    border-radius: 50px;
+    padding: 5px;
+    width: 90%;
+    max-width: 1200px;
+    margin: 32px auto;
+}
+.just-text div p{
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 46px;
+    color: #FFFFFF;
+    background: #B92728;
+    border-radius: 50px;
+    padding: 16px;
 }
