--- a/css/global.css
+++ b/css/global.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: 'Tajawal', 'Cairo', sans-serif;
     position: relative;
+    max-width: 100%;
 }
 .border{
     border: 1px solid #000;
