--- a/css/style.css
+++ b/css/style.css
@@ -548,3 +548,116 @@ nav .search img{
     color: #B92728;
     padding: 4px;
 }
+
+.electronics-sales{
+    background: rgba(54, 75, 112, 0.1);
+    padding: 20px 10px;
+}
+.electronics-sales .headers{
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin: 20px auto 30px auto;
+}
+.electronics-sales .headers a{
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    font-feature-settings: 'salt' on, 'liga' off;
+    color: #FFFFFF;
+    background-color: #B92728;
+    padding: 8px 12px;
+    cursor: pointer;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+.electronics-sales .headers p{
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    color: #323232;
+}
+.electronics-sales .headers p span{
+    color: #B92728;
+}
+.electronics-sales .row .col{
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
+.electronics-sales .row .col > img{
+    width: 100%;
+}
+.electronics-sales .row .col > div{
+    background-color: #fff;
+    border: 1px solid #E5E9F2;
+    padding: 10px 20px;
+    text-align: right;
+}
+.electronics-sales .row .col > div > p{
+    font-weight: 600;
+    font-size: 11.7175px;
+    line-height: 12px;
+    color: #212529;
+}
+.electronics-sales .row .col > div .rating{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 10px 0;
+}
+.electronics-sales .row .col > div .rating .stars{
+    display: flex;
+    align-items: center;
+}
+.electronics-sales .row .col > div .rating .stars img{
+    width: 14px;
+}
+.electronics-sales .row .col > div .rating .stars span{
+    font-size: 8.81166px;
+    line-height: 10px;
+    color: #515151;
+    margin: 0 2px;
+}
+.electronics-sales .row .col > div .rating .text{
+    font-size: 8.81166px;
+    line-height: 9px;
+    color: #515151;
+}
+.electronics-sales .row .col > div .card-footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 0 6px 0;
+}
+.electronics-sales .row .col > div .card-footer p{
+    font-weight: 700;
+    font-size: 15.6233px;
+    line-height: 16px;
+    color: #B92728;
+}
+.electronics-sales .row .col > div .card-footer span{
+    font-weight: 700;
+    font-size: 11.7175px;
+    line-height: 14px;
+    text-decoration-line: line-through;
+    color: #323232;
+    margin: 0 4px 0 0;
+}
+.electronics-sales .row .col > div .card-footer a{
+    font-weight: 700;
+    font-size: 9.1136px;
+    line-height: 14px;
+    color: #FFFFFF;
+    padding: 4px 8px;
+    background-color: #B92728;
+    cursor: pointer;
+    border-radius: 50px 0px 50px 0px;
+    -webkit-border-radius: 50px 0px 50px 0px;
+    -moz-border-radius: 50px 0px 50px 0px;
+    -ms-border-radius: 50px 0px 50px 0px;
+    -o-border-radius: 50px 0px 50px 0px;
+}
