--- a/css/style.css
+++ b/css/style.css
@@ -780,3 +780,8 @@ nav .search img{
     text-align: right;
     margin: 0 0 0 8px;
 }
+
+.women-clothes{
+    background-color: #0000;
+    margin: 20px 5px;
+}
