--- a/css/responsive.css
+++ b/css/responsive.css
@@ -24,6 +24,9 @@
     body{
         padding: 77px 0 0 0;
     }
+    nav *{
+        order: 2;
+    }
     .mobile-nav{
         display: flex;
         width: 100%;
@@ -32,7 +35,7 @@
         order: 1;
     }
     .badge-btns{
-        width: 100%;
+        width: fit-content;
     }
     nav{
         padding: 10px;
@@ -54,5 +57,220 @@
     .second-nav{
         justify-content: center;
         padding: 10px 4px;
+    }
+    .ads span{
+        font-size: 24px;
+        text-align: center;
+    }
+    .sales.row div div .text p{
+        font-size: 20px;
+    }
+    .sales.row div div .text span{
+        font-size: 18px;
+    }
+
+    .countdown{
+        width: calc(100% - 20px);
+        margin: 10px auto;
+        padding: 20px 10px 0 10px;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    .countdown .timer > span{
+        margin: 0 6px 0 4px;
+        font-size: 40px;
+        line-height: 22px;
+    }
+    .countdown .timer > div p{
+        font-size: 18px;
+        width: 36px;
+        height: 30px;
+        line-height: 20px;
+    }
+    .countdown .timer > div span{
+        font-size: 16px;
+        line-height: 26px;
+    }
+    .countdown .title{
+        padding: 12px 40px;
+        margin: 20px 8px 10px 8px;
+    }
+    .countdown .title img{
+        width: 24px;
+    }
+    .countdown .title p{
+        font-size: 20px;
+        margin: 0 0 0 12px;
+    }
+
+    .just-text > div p{
+        font-size: 24px;
+        padding: 8px;
+        line-height: 36px;
+    }
+
+    .sales-24h .title{
+        padding: 12px 30px;
+        margin: 20px auto 10px auto;
+    }
+    .sales-24h .title img{
+        width: 24px;
+    }
+    .sales-24h .title p{
+        font-size: 18px;
+        margin: 8px 0 0 12px;
+    }
+    .sales-24h .row .col > div div span{
+        font-size: 24px;
+        line-height: 34px;
+    }
+
+    .electronics-sales .row .col > div{
+        padding: 6px 12px;
+    }
+    .electronics-sales .row .col > div > p{
+        font-size: 16px;
+        line-height: 22px;
+    }
+    .electronics-sales .row .col > div .rating{
+        flex-direction: column;
+        padding: 8px 0 12px 0;
+    }
+    .electronics-sales .row .col > div .rating .stars img{
+        width: 16px;
+    }
+    .electronics-sales .row .col > div .rating .stars span{
+        font-size: 14px;
+        line-height: 14px;
+        margin: 0 4px 0 0;
+    }
+    .electronics-sales .row .col > div .rating .text{
+        font-size: 14px;
+        line-height: 18px;
+        order: 2;
+        margin: 8px 0 0 0;
+    }
+    .electronics-sales .row .col > div .card-footer{
+        flex-direction: column;
+        margin: 0 0 6px 0;
+    }
+    .electronics-sales .row .col > div .card-footer p{
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .electronics-sales .row .col > div .card-footer span{
+        font-size: 14px;
+        line-height: 18px;
+        margin: 4px 0;
+    }
+    .electronics-sales .row .col > div .card-footer a{
+        font-size: 16px;
+        line-height: 20px;
+        padding: 6px 12px;
+    }
+
+    .sales2 .col > div{
+        align-items: center;
+    }
+    .sales2 img{
+        width: 120px;
+        height: 120px;
+    }
+    .sales2 .col div .text{
+        padding: 8px;
+    }
+    .sales2.row .col div .text p{
+        font-size: 18px;
+    }
+    .sales2.row .col div .text span{
+        font-size: 16px;
+        line-height: 22px;
+    }
+    
+    .women-sales .title{
+        padding: 12px 30px;
+        margin: 20px auto 10px auto;
+    }
+    .women-sales .title img{
+        width: 24px;
+    }
+    .women-sales .title p{
+        font-size: 18px;
+        margin: 8px 0 0 12px;
+    }
+
+    .women-clothes .headers{
+        text-align: center;
+    }
+    .women-clothes .headers a{
+        text-align: center;
+    }
+    .women-clothes .headers p{
+        font-size: 18px;
+    }
+    .ramadan-sales.sale40 .row .col div p{
+        font-size: 20px;
+        padding: 10px 2px;
+    }
+    
+    .ramadan-sales.sale40.red-section .row .col p{
+        font-size: 16px;
+    }
+
+    .house-sales .headers{
+        flex-direction: column;
+        padding: 20px 0;
+        width: calc(100% - 40px);
+    }
+    .house-sales .headers a{
+        font-size: 14px;
+        line-height: 18px;
+        padding: 10px 14px;
+    }
+    .house-sales .headers .title{
+        padding: 12px 30px;
+        margin: 20px auto 10px auto;
+    }
+    .house-sales .headers .title img{
+        width: 20px;
+    }
+    .house-sales .headers .title p{
+        font-size: 16px;
+        margin: 8px 0 0 12px;
+    }
+
+    .footer-banner{
+        padding: 36px 6px;
+    }
+    .footer-banner .col > div:not(.text) p:nth-of-type(1){
+        font-size: 26px;
+        line-height: 36px;
+    }
+    .footer-banner .col > div:not(.text) p:nth-of-type(2){
+        font-size: 22px;
+        line-height: 32px;
+        margin: 0 0 20px 0;
+    }
+    .footer-banner .col > div.text{
+        padding: 4px 20px 4px 4px;
+    }
+    .footer-banner .col > div.text p{
+        font-size: 22px;
+        line-height: 32px;
+    }
+    .footer-banner .col > div.text p:nth-of-type(2){
+        padding: 0 20px 0 0;
+    }
+
+    .badge{
+        width: 80px !important;
+    }
+
+    .help{
+        bottom: 8px;
+        right: 12px;
+    }
+    .help img{
+        width: 68px;
     }
 }
