--- a/css/global.css
+++ b/css/global.css
@@ -6,6 +6,10 @@
     position: relative;
     max-width: 100%;
 }
+a{
+    text-decoration: none;
+    color: inherit;
+}
 .border{
     border: 1px solid #000;
 }
