--- a/css/responsive.css
+++ b/css/responsive.css
@@ -21,9 +21,6 @@
 }
 
 @media screen and (max-width: 1225px) {
-    body{
-        padding: 77px 0 0 0;
-    }
     nav *{
         order: 2;
     }
@@ -103,10 +100,23 @@
         margin: 0 0 0 12px;
     }
 
+    .just-text > p:nth-of-type(1){
+        font-size: 24px;
+        line-height: 30px;    
+    }
+    .just-text > p:nth-of-type(2){
+        font-size: 26px;
+        line-height: 34px;
+        margin: 8px 0;
+    }
+    .just-text div{
+        width: 96%;
+        margin: 20px auto;
+    }
     .just-text > div p{
         font-size: 24px;
         padding: 8px;
-        line-height: 36px;
+        line-height: 32px;
     }
 
     .sales-24h .title{
@@ -272,5 +282,40 @@
     }
     .help img{
         width: 68px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .bottom-nav{
+        display: flex;
+    }
+    .help{
+        display: none;
+    }
+    .second-nav{
+        display: none;
+    }
+
+    .mobile-nav{
+        width: fit-content;
+    }
+    nav{
+        padding: 0;
+        flex-direction: row;
+        position: sticky !important;
+        top: 0;
+        z-index: 3;
+    }
+    .toggler{
+        display: none;
+    }
+    .toggleable{
+        display: none;
+    }
+    .search.toggleable{
+        display: block;
+        width: calc(100% - 66px);
+        order: 1;
+        margin: 10px 0 10px 10px;
     }
 }
